--- a/index.html
+++ b/index.html
@@ -4,31 +4,9 @@
 <head>
     <title>客户圈-首页</title>
     <meta charset="UTF-8">
-    <link href="./assets/css/style.css" rel="stylesheet">
+    <link href="./dist/style.css" rel="stylesheet">
+    <link rel="stylesheet" href="./dist/index.css">
     <script src="./assets/js/flexible.js"></script>
-    <style>
-        body{ background-color: #f7f7f7; }
-        .banner{ font-size: 0; }
-        .banner img{ width: 100%; }
-        .capability { padding: .5rem; }
-        .text-center { text-align: center; }
-        .main-title { font-size: .45rem; color: #21a8fb; margin-bottom: .2rem; }
-        .sub-title { font-size:.24rem; color: #adadad; margin-bottom: .3rem; }
-        .thumbnail { display: flex; background-color: #fff; padding: .36rem .3rem; margin-bottom: .3rem; }
-        .thumbnai-image { font-size: 0; }
-        .thumbnail img { width: .96rem; margin-right: .26rem; }
-        .capability-list .thumbnail:last-child { margin-bottom: 0; }
-        .thumbnail .content h4 { font-size: 28px; color: #181a21;  }
-        .thumbnail .content p { font-size: 22px; line-height: .4rem; color: #b8b8b8; }
-        .advantage { background-color: #fff; padding: .5rem .85rem; }
-        .advantage .row { display: flex; margin-bottom: .32rem; }
-        .advantage .row:last-child { margin-bottom: 0; }
-        .advantage .row .col { flex: auto; text-align: center; background-color: #f9f9f9; margin-right: .5rem; }
-        .advantage .row .col:last-child { margin-right: 0; }
-        .advantage .row .col p { font-size: .22rem; color: #333; }
-        .img-screen { padding: 0 .15rem; }
-        .img-screen img { width: 100%; }
-    </style>
 </head>
 
 <body>
@@ -112,7 +90,7 @@
                 </div>
             </div>
         </div>
-        <img src="./assets/image/bg.png" alt="">
+        <img src="./assets/image/bg.png" style="width: 100%" alt="">
         <div class="suit">
             <h4 class="main-title text-center">适用的行业</h4>
             <h6 class="sub-title text-center">线下实体门店线上商家</h6>
